# khnum

./: .env.example  .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  default.nix  docker-compose.yml
docs/: architecture.md
front/: package.json  template.pot  vue.config.js
front/public/: index.html
front/src/: App.vue  main.js  router.js  store.js  translations.json
front/src/components/: Auth.vue  Invitation.vue  Login.vue  Registration.vue
front/src/lib/: api.js
front/src/locale/en_US/LC_MESSAGES/: app.po
front/src/locale/fr_FR/LC_MESSAGES/: app.po
front/src/views/: Home.vue  Invitation.vue  Login.vue  Logout.vue  Register.vue  Registration.vue
migrations/2018-10-09-101948_users/: up.sql
migrations/khnum/sqlite/2018-10-09-101948_users/: up.sql
migrations/postgres/2018-10-09-101948_users/: up.sql
migrations/postgres/2019-09-02-162325_books/: up.sql
migrations/sqlite/: 2018-10-09-101948_users  2019-08-24-133158_user_language
migrations/sqlite/2018-10-09-101948_users/: up.sql
migrations/sqlite/2019-08-24-133158_user_language/: up.sql
migrations/sqlite/2019-09-02-162325_books/: up.sql
po/activue/: activue.pot  en.po  fr.po
po/khnum/: en.po  fr.po  khnum.pot
src/: errors.rs  main.rs  models.rs  schema.rs  wiring.rs
src/controllers/: book.rs
src/khnum/: mod.rs  schema.rs  wiring.rs
src/khnum/users/: mod.rs  models.rs  utils.rs
src/khnum/users/controllers/: auth.rs  forgotten.rs  register.rs
src/khnum/users/controllers/auth/: tests.rs
src/khnum/users/controllers/forgotten/: tests.rs
src/khnum/users/controllers/register/: tests.rs
src/khnum/users/repository/: auth_handler.rs  user_handler.rs
src/repository/: book_handler.rs  mod.rs
src/users/: models.rs  utils.rs
src/users/controllers/: auth.rs  forgotten.rs  invitation.rs  mod.rs  register.rs  register_test.rs
src/users/controllers/auth/: tests.rs
src/users/controllers/forgotten/: tests.rs
src/users/controllers/register/: tests.rs
src/users/repository/: auth_handler.rs  fetch_handler.rs  invitation_handler.rs  mod.rs  register_handler.rs  user_handler.rs
static/: index.html
translations/en/LC_MESSAGES/: activue.mo  khnum.mo
translations/fr/LC_MESSAGES/: activue.mo  khnum.mo
