[package]
name = "activue"
version = "0.1.0"
authors = ["mmai <henri@bourcereau.fr>"]
edition = "2018"

[dependencies]
actix = { version = "0.8.1", features = ["http"] }
actix-rt = "0.2.2"
actix-web = "1.0.0-beta.4"
actix-files = "0.1.0-beta.4"

bcrypt = "0.2.1"
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.3.3", features = ["postgres", "sqlite", "uuid", "r2d2", "chrono"] }
dotenv = "0.13.0"
derive_more = "0.14"
env_logger = "0.6.0"
jsonwebtoken = "6.0.0"
lettre = "0.9.1"
lettre_email = "0.9.1"
futures = "0.1.25"
r2d2 = "0.8.3"
serde_derive="1.0.80"
serde_json="1.0"
serde="1.0"
uuid = { version = "0.6.5", features = ["serde", "v4"] }
num_cpus = "1.10.0"
url = "1.7.2"
diesel_migrations = "1.4.0"

[features]
default = ["postgres"]
postgres = ["diesel/postgres"]
test = ["diesel/sqlite"]
debug-mailer = []

[dev-dependencies]
actix-http-test = "0.2.0"

