[package]
name = "khnum"
version = "0.1.0"
authors = ["mmai <henri@bourcereau.fr>"]
edition = "2018"

[dependencies]
actix = { version = "0.8.1", features = ["http"] }
actix-http-test = "0.2.0"
actix-rt = "0.2.2"
actix-web = "1.0.0-beta.4"
actix-files = "0.1.0-beta.4"

bcrypt = "0.2.1"
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.3.3", features = ["postgres", "sqlite", "uuid", "r2d2", "chrono"] }
dotenv = "0.13.0"
derive_more = "0.14"
env_logger = "0.6.0"
jsonwebtoken = "6.0.0"
lettre = "0.9.2"
lettre_email = "0.9.2"
futures = "0.1.25"
r2d2 = "0.8.3"
serde_derive="1.0.80"
serde_json="1.0"
serde="1.0"
uuid = { version = "0.6.5", features = ["serde", "v4"] }
num_cpus = "1.10.0"
url = "1.7.2"
diesel_migrations = "1.4.0"
actix-http = "0.2.3"
percent-encoding = "1.0.1"
actix-session = "0.1.1"
lazy_static = "1.3.0"
regex = "1.1.7"
awc = "0.2.1"

gettext = { git = "https://github.com/Plume-org/gettext/", rev = "294c54d74c699fbc66502b480a37cc66c1daa7f3" }
gettext-macros = { git = "https://github.com/Plume-org/gettext-macros/", rev = "a7c605f7edd6bfbfbfe7778026bfefd88d82db10" }
gettext-utils = { git = "https://github.com/Plume-org/gettext-macros/", rev = "a7c605f7edd6bfbfbfe7778026bfefd88d82db10" }

[dependencies.actix_i18n]
version = "0.5"
git = "https://github.com/aardwolf-social/rocket_i18n"
branch = "asonix/upgrade-actix"

[features]
default = ["postgres"]
postgres = ["diesel/postgres"]
test = ["diesel/sqlite"]
debug-mailer = []
